K8s/platform-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platform-service
  template:
    metadata:
      labels:
        app: platform-service
    spec:
      containers:
        - name: platformservice
          image: gffloyd/platformservice:latest
