K8s/command-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: command-service
  template:
    metadata:
      labels:
        app: command-service
    spec:
      containers:
        - name: command-service
          image: gffloyd/commandservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: commands-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: command-service
  ports:
  - name: command-service
    protocol: TCP
    port: 80
    targetPort: 8080
